# crab-code

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  clippy.toml  deny.toml
crates/acp/: Cargo.toml
crates/acp/src/: lib.rs  server.rs
crates/agent/: Cargo.toml
crates/agent/src/: auto_dream.rs  branch_manager.rs  checkpoint.rs  coordinator.rs  dialogue.rs  effort.rs  error_recovery.rs  git_context.rs  lib.rs  memory_retriever.rs  message_bus.rs  prompt_cache.rs  prompt_optimizer.rs  prompt_suggestion.rs  prompt_template.rs  query_loop.rs  rollback.rs  runtime.rs  slash_commands.rs  stop_hooks.rs  summarizer.rs  task.rs  team.rs  tips.rs  token_budget.rs  tool_analytics.rs  tool_patterns.rs  tool_recommender.rs  worker.rs
crates/agent/tests/: integration_m7b.rs
crates/agents/: Cargo.toml
crates/agents/src/: auto_dream.rs  definition.rs  lib.rs  repl_commands.rs  runtime.rs  summarizer.rs
crates/agents/tests/: integration_m7b.rs
crates/api/: Cargo.toml
crates/api/src/: batch.rs  bedrock.rs  cache.rs  capabilities.rs  context_optimizer.rs  cost_optimizer.rs  dedup.rs  degradation.rs  error.rs  error_classifier.rs  fallback.rs  lib.rs  middleware.rs  model_selector.rs  parallel.rs  provider_health.rs  provider_router.rs  rate_limit.rs  response_cache.rs  retry_strategy.rs  stream_aggregator.rs  streaming.rs  token_budget.rs  token_estimation.rs  token_limiter.rs  types.rs  usage_stats.rs  vertex.rs
crates/auth/: Cargo.toml
crates/auth/src/: api_key.rs  aws_iam.rs  bedrock_auth.rs  credential_chain.rs  error.rs  gcp_identity.rs  keychain.rs  lib.rs  oauth.rs  resolver.rs  vertex_auth.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: config.rs  lib.rs  remote_bridge.rs  remote_core.rs  repl_bridge.rs  server.rs  session_token.rs  status.rs  transport.rs  trusted_device.rs  webhook.rs  ws_server.rs
crates/cli/: Cargo.toml
crates/cli/src/: acp_mode.rs  agent.rs  args.rs  completions.rs  deep_link.rs  installer.rs  main.rs  output.rs  setup.rs
crates/commands/: Cargo.toml
crates/commands/src/: context.rs  lib.rs  registry.rs  types.rs
crates/common/: Cargo.toml
crates/common/src/: debug.rs  error.rs  i18n.rs  id.rs  lib.rs  localized_error.rs  path.rs  result.rs  text.rs
crates/config/: Cargo.toml
crates/config/assets/: config.schema.json
crates/config/examples/: gen-schema.rs
crates/config/src/: agents_md.rs  change_detector.rs  claude_md.rs  config.rs  config_toml.rs  crab_md.rs  feature_flag.rs  gitignore.rs  global_state.rs  hooks.rs  hot_reload.rs  keybinding.rs  lib.rs  loader.rs  mdm.rs  merge.rs  migration.rs  permissions.rs  plugin_loader.rs  policy.rs  profile.rs  runtime.rs  settings.rs  settings_cache.rs  validation.rs  writer.rs
crates/config/tests/: merge_spec.rs  permission_deny_wins_spec.rs  plugin_loader_spec.rs  writer_spec.rs
crates/core/: Cargo.toml
crates/core/src/: capability.rs  config.rs  conversation.rs  event.rs  hook.rs  ide.rs  lib.rs  message.rs  message_group.rs  model.rs  notification.rs  permission.rs  query.rs  remote.rs  result.rs  tip.rs  tool.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  main.rs  protocol.rs  server.rs  session_pool.rs
crates/engine/: Cargo.toml
crates/engine/src/: effort.rs  lib.rs  loop.rs  stop_hooks.rs  streaming.rs  token_budget.rs  tool_orchestration.rs
crates/fs/: Cargo.toml
crates/fs/src/: content_cache.rs  diff.rs  encoding.rs  file_cache.rs  gitignore.rs  glob.rs  grep.rs  index.rs  lib.rs  line_ending.rs  lock.rs  symlink.rs  watch.rs
crates/ide/: Cargo.toml
crates/ide/src/: client.rs  detection.rs  injection.rs  lib.rs  lockfile.rs  notifications.rs  state.rs
crates/job/: Cargo.toml
crates/job/src/: handler.rs  lib.rs  spec.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: audit.rs  cancellation.rs  capability.rs  client.rs  compliance_tests.rs  connection_pool.rs  discovery.rs  handshake.rs  health.rs  lib.rs  logging.rs  manager.rs  negotiation.rs  notification.rs  progress.rs  protocol.rs  resource.rs  resource_diff.rs  resource_subscription.rs  resource_watcher.rs  roots.rs  sampling.rs  server.rs  server_acl.rs  sse_server.rs  tool_chain.rs  tool_group.rs  tool_sandbox.rs  tool_version.rs  transport_failover.rs  transport_layer.rs  transport_monitor.rs
crates/memory/: Cargo.toml
crates/memory/src/: agents_md.rs  index.rs  lib.rs  paths.rs  prompt.rs  ranker.rs  relevance.rs  security.rs  store.rs  team.rs  types.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: bundled_skills.rs  frontmatter_hooks.rs  hook.rs  hook_registry.rs  hook_types.rs  hook_watchers.rs  lib.rs  manifest.rs  skill.rs  skill_builder.rs  wasm_runtime.rs
crates/process/: Cargo.toml
crates/process/src/: lib.rs  pty.rs  sandbox.rs  signal.rs  spawn.rs  tree.rs
crates/remote/: Cargo.toml
crates/remote/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  permission.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: config.rs  doctor.rs  error.rs  lib.rs  policy.rs  violation.rs
crates/session/: Cargo.toml
crates/session/src/: auto_compact.rs  compaction.rs  context.rs  conversation.rs  cost.rs  file_history.rs  history.rs  input_expand.rs  lib.rs  memory.rs  memory_age.rs  memory_extract.rs  memory_relevance.rs  memory_types.rs  micro_compact.rs  migration.rs  snip_compact.rs  team_memory.rs  template.rs
crates/skill/: Cargo.toml
crates/skill/src/: frontmatter.rs  registry.rs
crates/swarm/: Cargo.toml
crates/swarm/src/: bus.rs  lib.rs  mailbox.rs  retry.rs  roster.rs  task_lock.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: cost.rs  export.rs  lib.rs  metrics.rs  session_recorder.rs  tracer.rs
crates/tools/: Cargo.toml
crates/tools/src/: executor.rs  lib.rs  permission.rs  registry.rs  schema.rs  str_utils.rs
crates/tools/tests/: integration_m3.rs
crates/tui/: Cargo.toml
crates/tui/assets/: header-logo.txt
crates/tui/src/: action.rs  app.rs  app_event.rs  component.rs  component_id.rs  custom_terminal.rs  error_messages.rs  event.rs  focus.rs  global_state.rs  insert_history.rs  lib.rs  (+7 more)
crates/utils/: Cargo.toml
(+399 files in other folders)
