[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/lingcoder/crab-code"
homepage = "https://github.com/lingcoder/crab-code"
keywords = ["cli", "ai", "coding-assistant", "llm", "agent"]
categories = ["command-line-utilities", "development-tools"]
description = "Rust-native agentic coding CLI — open-source alternative to Claude Code"

[workspace.dependencies]
# ─── 异步运行时 ───
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# ─── 序列化 ───
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = "1.1.2"

# ─── CLI ───
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
owo-colors = "4"

# ─── HTTP ───
reqwest = { version = "0.13", features = ["json", "stream", "form", "multipart"] }
mime_guess = "2"
eventsource-stream = "0.2"
either = "1"

# ─── TUI ───
ratatui = { version = "0.30", features = ["serde"] }
crossterm = { version = "0.29", features = ["event-stream"] }

# ─── 错误处理 ───
thiserror = "2"
anyhow = "1"

# ─── 日志/追踪 ───
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# ─── 文件系统 ───
globset = "0.4"
similar = "3"
regex = "1"
notify = "8"
ignore = "0.4"
fd-lock = "4.0"
dunce = "1"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"

# ─── 代码渲染 ───
syntect = "5"
pulldown-cmark = "0.13"

# ─── 系统 ───
sysinfo = "0.38"
directories = "6"

# ─── 认证 ───
keyring = "3"
oauth2 = "5"

# ─── 可观测性 ───
opentelemetry = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry_sdk = "0.31"
tracing-opentelemetry = "0.32"

# ─── WebSocket / MCP ───
tokio-tungstenite = "0.29"
rmcp = { version = "1", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }

# ─── WASM 插件 ───
wasmtime = "43"

# ─── 进程 ───
portable-pty = "0.9"

# ─── 编码与加密 ───
base64 = "0.22"
sha2 = "0.11"
rand = "0.10"

# ─── PDF ───
pdf-extract = "0.10"

# ─── 版本管理 ───
semver = "1"

# ─── 杂项 ───
uuid = { version = "1", features = ["v4"] }
ulid = "1"
lru = "0.17"
unicode-width = "0.2"
strip-ansi-escapes = "0.2"
jsonc-parser = { version = "0.32", features = ["serde"] }
jsonschema = "0.46"
schemars = "1"
nucleo-matcher = "0.3"

# ─── Phase 1 新增：bridge / remote / sandbox 所需 ───
jsonwebtoken = "10"
# ─── Phase 7-auth：MCP OAuth 打开浏览器 + URL 编码 ───
webbrowser = "1"
urlencoding = "2"
# ─── Phase 7 foundation：binary sniff + shell expand ───
infer = "0.19"
shellexpand = "3"
axum = { version = "0.8", features = ["ws"] }
croner = "3"
# Linux-only process sandbox
landlock = "0.4"
# Deferred external deps for computer_use (declared here so Phase 4 doesn't touch workspace)
# Note: `screenshots` crate is deprecated in favor of `xcap`; using xcap instead.
xcap = "0.9"
enigo = "0.6"

# ─── 测试 ───
tempfile = "3"
wat = "1"

# ─── 内部 crate ───
crab-common = { path = "crates/common" }
crab-core = { path = "crates/core" }
crab-config = { path = "crates/config" }
crab-auth = { path = "crates/auth" }
crab-api = { path = "crates/api" }
crab-mcp = { path = "crates/mcp" }
crab-ide = { path = "crates/ide" }
crab-fs = { path = "crates/fs" }
crab-process = { path = "crates/process" }
crab-tools = { path = "crates/tools" }
crab-session = { path = "crates/session" }
crab-agent = { path = "crates/agent" }
crab-tui = { path = "crates/tui" }
crab-plugin = { path = "crates/plugin" }
crab-skill = { path = "crates/skill" }
crab-memory = { path = "crates/memory" }
crab-telemetry = { path = "crates/telemetry" }
crab-engine = { path = "crates/engine" }
crab-bridge = { path = "crates/bridge" }
crab-remote = { path = "crates/remote" }
crab-sandbox = { path = "crates/sandbox" }

[workspace.lints.rust]
unsafe_code = "forbid"
# Keep in sync with CI (RUSTFLAGS=-Dwarnings)
unused_mut = "deny"
unused_comparisons = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow during M0 skeleton phase — will tighten as real impls land
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
unused_async = "allow"
new_without_default = "allow"
# Phase 2 generated code — refactor targets
struct_excessive_bools = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
fn_params_excessive_bools = "allow"
# Phase 2 stubs — will tighten as real impls land
unnecessary_wraps = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
comparison_chain = "allow"
if_same_then_else = "allow"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
opt-level = 3
