[package]
name = "crab-acp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent Client Protocol (ACP) — crab as an external agent for Zed / Neovim / other ACP-speaking editors"

[dependencies]
crab-core.workspace = true
# Upstream ACP SDK (Zed / agentclientprotocol.com official Rust crate).
# Re-exported as `crab_acp::sdk` so composition roots don't add the SDK
# as a direct dep.
agent-client-protocol.workspace = true
tokio.workspace = true
# tokio_util::compat adapters (tokio io → futures io for ByteStreams).
tokio-util = { workspace = true, features = ["compat"] }
thiserror.workspace = true

[lints]
workspace = true
