[package]
name = "crab-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-agent orchestration for Crab Code"

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
crab-session.workspace = true
crab-tools.workspace = true
crab-api.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true

[lints]
workspace = true
