[package]
name = "crab-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-agent orchestration for Crab Code"

[features]
default = []
mem-ranker = ["crab-memory/mem-ranker"]

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
crab-config.workspace = true
crab-memory.workspace = true
crab-session.workspace = true
crab-tools.workspace = true
crab-api.workspace = true
crab-plugin.workspace = true
crab-process.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true

[dev-dependencies]
crab-skill.workspace = true
tempfile.workspace = true

[lints]
workspace = true
