[package]
name = "crab-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-agent orchestration for Crab Code"

[features]
default = []
mem-ranker = ["crab-memory/mem-ranker"]
# Background memory-consolidation cycles (crab's port of CCB's src/services/autoDream/).
# Gated because the forked-agent runner inside is a stub today; flipping this
# on only reveals the scheduling primitives, not an actual LLM dream.
auto-dream = []
# CCB proactive-suggestions placeholder. Matches CCB's feature('PROACTIVE')
# gate where the open-source build ships an empty stub.
proactive = []

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
crab-config.workspace = true
crab-engine.workspace = true
crab-memory.workspace = true
crab-session.workspace = true
crab-tools.workspace = true
crab-api.workspace = true
crab-mcp.workspace = true
crab-plugin.workspace = true
crab-process.workspace = true
crab-skill.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
fd-lock.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
