[package]
name = "crab-agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-agent orchestration for Crab Code"

[features]
default = []
mem-ranker = ["crab-memory/mem-ranker"]
# Background memory-consolidation cycles. Gated because the forked-agent
# runner inside is a stub today; flipping this on only reveals the
# scheduling primitives, not an actual LLM dream.
auto-dream = []
# Proactive-suggestions placeholder. The default build ships an empty stub
# behind this gate; the real engine will land in a follow-up.
proactive = []

[dependencies]
crab-utils.workspace = true
crab-core.workspace = true
crab-config.workspace = true
crab-engine.workspace = true
crab-hooks.workspace = true
crab-memory.workspace = true
crab-session.workspace = true
crab-tools.workspace = true
crab-api.workspace = true
crab-mcp.workspace = true
crab-plugin.workspace = true
crab-swarm.workspace = true
crab-skills.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
