[package]
name = "crab-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication handling for Crab Code"

[dependencies]
crab-common.workspace = true
crab-config.workspace = true
crab-core.workspace = true
keyring.workspace = true
keyring-core.workspace = true
oauth2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
base64.workspace = true
sha2.workspace = true
rand.workspace = true

[features]
default = []
bedrock = []
vertex = []

[lints]
workspace = true
