[package]
name = "crab-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WebSocket bridge server — exposes a live session to remote clients"

[features]
default = []
full = ["rest-api", "remote-core", "webhook"]
rest-api = ["dep:axum"]
remote-core = []
webhook = []

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
crab-config.workspace = true
crab-auth.workspace = true
crab-session.workspace = true
crab-agent.workspace = true
crab-engine.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
# optional
axum = { workspace = true, optional = true }

[lints]
workspace = true
