[package]
name = "crab-commands"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Slash command infrastructure — trait, registry, and built-in handlers"

[dependencies]
crab-core.workspace = true
serde_json.workspace = true

[lints]
workspace = true
