[package]
name = "crab-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities and error types for Crab Code"

[dependencies]
thiserror.workspace = true
unicode-width.workspace = true
strip-ansi-escapes.workspace = true
ulid.workspace = true
dunce.workspace = true
directories.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
infer.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
