[package]
name = "crab-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration system for Crab Code"

[dependencies]
crab-utils.workspace = true
crab-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
jsonschema.workspace = true
directories.workspace = true

# Optional: only used by the `gen-schema` example. Production binaries
# never link schemars because the feature is disabled by default.
schemars = { workspace = true, optional = true }

[features]
default = []
# Enables `cargo run --example gen-schema --features gen-schema` to dump a
# scaffold JSON Schema for `Config`. The output is meant as a starting
# point for hand-edits to `assets/config.schema.json` — it is NOT
# committed and CI never runs it.
gen-schema = ["dep:schemars"]

[[example]]
name = "gen-schema"
required-features = ["gen-schema"]

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
