[package]
name = "crab-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain models and trait definitions for Crab Code"

[dependencies]
regex.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
