[package]
name = "crab-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Background daemon for Crab Code"

[[bin]]
name = "crab-daemon"
path = "src/main.rs"

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
crab-config.workspace = true
crab-api.workspace = true
crab-session.workspace = true
crab-tools.workspace = true
crab-agent.workspace = true
tokio.workspace = true
fd-lock.workspace = true
tracing-appender.workspace = true

[lints]
workspace = true
