[package]
name = "crab-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Background daemon for Crab Code"

[[bin]]
name = "crab-daemon"
path = "src/main.rs"

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
crab-config.workspace = true
crab-api.workspace = true
crab-session.workspace = true
crab-tools.workspace = true
crab-agent.workspace = true
tokio.workspace = true
fd-lock.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
sysinfo.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
