[package]
name = "crab-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Background daemon for Crab Code"

[[bin]]
name = "crab-daemon"
path = "src/main.rs"

[dependencies]
crab-utils.workspace = true
crab-core.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
