[package]
name = "crab-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Raw query loop for Crab Code — extracted from crab-agents in v2.3"

[dependencies]
crab-core.workspace = true
crab-api.workspace = true
crab-session.workspace = true
crab-telemetry.workspace = true
crab-tools.workspace = true
crab-hooks.workspace = true
crab-plugin.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
