[package]
name = "crab-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "File system operations for Crab Code"

[dependencies]
crab-common.workspace = true
globset.workspace = true
ignore.workspace = true
notify.workspace = true
similar.workspace = true
fd-lock.workspace = true

[lints]
workspace = true
