[package]
name = "crab-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "File system operations for Crab Code"

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
globset.workspace = true
ignore.workspace = true
notify.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
similar.workspace = true
toml.workspace = true
fd-lock.workspace = true
regex.workspace = true
grep-matcher.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
lru.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
