[package]
name = "crab-ide"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "IDE integration via MCP notifications for Crab Code"

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
directories.workspace = true

[lints]
workspace = true
