[package]
name = "crab-job"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified job scheduling — one-shot / interval / cron — for crab subsystems"

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
# serde (Job / JobHandle ids, persisted state)
serde.workspace = true
serde_json.workspace = true
# scheduling
tokio.workspace = true
tokio-util.workspace = true
croner.workspace = true
chrono.workspace = true
# diagnostics
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
# test-util gates tokio::time::{advance, pause} used to drive deterministic
# scheduler tests; not needed at runtime.
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
