[package]
name = "crab-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol implementation for Crab Code"

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest = { workspace = true, optional = true }
eventsource-stream = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }

[features]
default = ["sse"]
sse = ["reqwest", "eventsource-stream", "futures"]
ws = ["tokio-tungstenite", "futures"]

[lints]
workspace = true
