[package]
name = "crab-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol implementation for Crab Code"

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rmcp.workspace = true
reqwest.workspace = true
fd-lock.workspace = true
directories.workspace = true
base64.workspace = true
sha2.workspace = true
rand.workspace = true
webbrowser.workspace = true
urlencoding.workspace = true
futures = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
ws = ["tokio-tungstenite", "futures"]

[lints]
workspace = true
