[package]
name = "crab-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol implementation for Crab Code"

[dependencies]
crab-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rmcp.workspace = true
reqwest.workspace = true
crab-utils.workspace = true
crab-fs.workspace = true
base64.workspace = true
sha2.workspace = true
rand.workspace = true
webbrowser.workspace = true
urlencoding.workspace = true
globset.workspace = true
futures.workspace = true
tokio-tungstenite.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
