[package]
name = "crab-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "File-based memory system for Crab Code"

[features]
default = []
mem-ranker = ["dep:crab-api", "dep:crab-core", "dep:tokio"]

[dependencies]
crab-common.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
dunce.workspace = true
# optional — only for mem-ranker feature
crab-api = { workspace = true, optional = true }
crab-core = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
