[package]
name = "crab-process"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Child process management for Crab Code"

[dependencies]
crab-common.workspace = true
tokio.workspace = true
sysinfo.workspace = true
portable-pty = { workspace = true, optional = true }

[features]
default = []
pty = ["portable-pty"]
sandbox = []

[lints]
workspace = true
