[package]
name = "crab-process"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Child process management for Crab Code"

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
tokio.workspace = true
sysinfo.workspace = true
serde.workspace = true
serde_json.workspace = true
portable-pty = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = []
pty = ["portable-pty"]

[lints]
workspace = true
