[package]
name = "crab-process"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Child process management for Crab Code"

[dependencies]
crab-utils.workspace = true
crab-core.workspace = true
tokio.workspace = true
sysinfo.workspace = true

[dev-dependencies]

[features]
default = []
pty = []

[lints]
workspace = true
