[package]
name = "crab-skill"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Skill discovery, loading, and registry for Crab Code"

[dependencies]
crab-common.workspace = true
crab-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
regex.workspace = true
nucleo-matcher.workspace = true

[lints]
workspace = true
